main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
}

html {
    background-color: #2b3b41;
}

.youtube-result-0, .podcast-result-0 {
    font-size: 1.3em;
    color: red;
}

a:hover, input:hover {
    cursor: pointer;
}

#submit-button, #more-on-youtube-link, #more-on-listennotes-link, .channel-id, .listen-link, #scroll-to-top {
    -webkit-transition: color .8s ease-out;
    -moz-transition: color .8s ease-out;
    -o-transition: color .8s ease-out;
    -ms-transition: color .8s ease-out;
    transition: color .8s ease-out;
    }

.hidden {
    display: none;
}

#search-head {
    height: 100vh;
    background: url(images/background-mobile.jpg) no-repeat fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: start;
}

.searchBox {
    width: 90%;
    color: #FF1F35;
    text-shadow: 2px 2px 3px #DFE1DA, 3px 3px 4px #555;
    border: none;
    border-bottom: solid 3px #f5f8fc;
    background: none;
    margin-bottom: 1em;
    font-size: 3em;
    font-family: 'Roboto', sans-serif;
}

.searchBox:focus, #submit-button {
    outline: none;
}

#submit-button {
    background-color: #FF1F35;
    border: none;
    height: 40%;
    width:70%;
    border-radius: 5px;
    color: #DFE1DA;
    font-size: 26px;
    font-weight: 600;
    letter-spacing: .02em;
}

#submit-button:hover {
    background-color: #DFE1DA;
    color: #FF1F35;
}

input {
    display: block;
    margin: 0 auto .8em;
}

.title {
    font-size: 3.8em;
    font-family: 'Righteous', cursive;
    letter-spacing: .03em;
}

.title, .tagline {
    text-align: center;
    color: #DFE1DA;
    text-shadow: 3px 3px 4px #555;
}

.tagline {
    margin-top: .5em;
    margin-bottom: 1.5em;
    letter-spacing: .02em;
    padding: 0 1%;
}

main {
    min-height: 100vh;
    padding-top: 2em;
    padding-bottom: 1.5em;
}

#youtube-logo {
    height: 1em;
    width: 1.8em;
}

#podcast-logo {
    height: 1em;
    width: 1em;
}

#youtube-tagline, #podcast-tagline {
    text-align: right;
    font-size: 3.5em;
    padding-right: 4%;
    border-bottom: black solid 1px;
    font-family: 'Righteous', cursive;
}

#youtube-results, #podcast-results {
    background-color: white;
    width: 80%;
    margin: 8% auto;
}

#youtube-results ul, #podcast-results ul {
    list-style-type: none;
}

#youtube-results-list li, #podcast-results-list li {
    border-bottom: solid #596f80 1px;
    white-space: pre-line;
    word-wrap: break-word;
    width: 90%;
    margin: 0 auto;
    position: relative;
    line-height: 1.3;
}

#youtube-results-list li:last-child, #podcast-results-list li:last-child {
    border-bottom: none;
}

iframe {
    border: none;
    width: 15em;
    height: 10em;
    display: block;
    margin: 0 auto;
}

#youtube-results-list li h3, #podcast-results-list li h3 {
    font-size: 1.3em;
    text-align: center;
    letter-spacing: .01em;
    font-weight: 600;
}

.channel-id {
    text-decoration: none;
    color: #000;
}

.channel-id:hover {
    color: #FF1F35;
}

#youtube-results-list li p {
    font-family: 'Roboto', sans-serif;
}

#more-on-youtube, #more-on-listennotes {
    text-align: center;
    border-top: solid 1px black;
    padding-top: 4%;
    padding-bottom: 3%;
}

#more-on-youtube-link, #more-on-listennotes-link {
    text-decoration: none;
    font-size: 1.6em;
    font-weight: 600;
    padding: 1.5%;
    border-radius: 2%;
    color: #FF1F35
}

#more-on-youtube-link:hover, #more-on-listennotes-link:hover {
    color: #DFE1DA;
    background-color: #FF1F35
}

#podcast-results-list li img {
    height: 80%;
    width: 80%;
    display: block;
    margin: 0 auto;
}

.episode-title {
    text-align: center;
    font-family: 'Roboto', sans-serif;
}

.listen-link-box {
    text-align: center;
}

.listen-link {
    text-decoration: none;
    font-size: 1.8em;
    font-weight: 600;
    border-radius: 3px;
    padding: 1.5%;
    color: #FF1F35
}

.listen-link:hover {
    color: #DFE1DA;
    background-color: #FF1F35
}

#footer {
    height: 2.3em;
    text-align: center;
    border: none;
}

#scroll-to-top {
    text-decoration: none;
    font-size: 1.4em;
    font-weight: 700;
    color: #FF1F35;
}

#scroll-to-top:hover {
    color: #DFE1DA;
}

@media only screen and (max-width: 330px) {
    
    #youtube-results, #podcast-results {
        width: 93%;
    }
}

@media only screen and (min-width: 700px) {
    
    #search-head {
        justify-content: center;
    }

    .title {
        font-size: 4.8em;
    }

    h2 {
        font-size: 2.5em;
    }

    .searchBox {
        font-size: 3.6em;
    }

    iframe {
        width: 22em;
        height: 16em;
    }

    .channel-id {
        font-size: 1.8em;
        font-weight: 700;
    }

    #youtube-results-list li p, .episode-title {
        font-size: 1.3em;
    }
    
    #podcast-results-list li img {
        height: 40%;
        width: 40%;
    }

    #footer {
        height: 2.6em;
    }
    
    #scroll-to-top {
        font-size: 2em;
    }

}

@media only screen and (min-width: 1224px) {

    
    #search-head {
        background: url(images/background-large.jpg);
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-size: cover;
        justify-content: start;
    }

    .title {
        margin-bottom: 5%;
    }

    #tagline {
        margin-bottom: 3em;
    }   

    .searchBox {
        width: 40%;
        height: 2.2em;
        margin-right: 1%;
        font-size: 3em;
    }

    #submit-button {
        width: 20%;
        height: 2em;
        margin-top: 2em;
    }

    #podcast-results-list li img {
        height: 25%;
        width: 25%;
    }

    main {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
    }

    #youtube-results, #podcast-results {
        width: 44%; 
    }

    form {
        display: flex;
        justify-content: center;
    }

    input {
        margin: 0;
    }

    iframe {
        width: 80%;
        height: 16em;
    }

    #podcast-results-list li img {
        height: 45%;
        width: 45%;
    }
}

@media only screen and (orientation: landscape) {
    #search-head {
        min-height: 800px;
    }
}
   

